force-app/main/default/objects/Negative_Information_DE_Insolvency_Event__c/Negative_Information_DE_Insolvency_Event__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyNegativeInformationDEInsolvencyEventV2</description>
    <label>Negative Information DE Insolvency Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>DE Insolvency Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negative Information DE Insolvency Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>