force-app/main/default/objects/Negative_Information_DE_Insolvency_Event__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <description>Record creation time.</description>
    <label>Created At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>