force-app/main/default/objects/Negative_Information_DE_Insolvency_Event__c/fields/Creditsafe_Company_Negative_Info_DE__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Negative_Info_DE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeCompanyNegativeInformationDEV2</description>
    <label>Creditsafe Company Negative Info DE</label>
    <referenceTo>Creditsafe_Company_Negative_Info_DE__c</referenceTo>
    <relationshipLabel>Negative Information DE Insolvency Event</relationshipLabel>
    <relationshipName>Negative_Information_DE_Insolvency_Event</relationshipName>
    <type>Lookup</type>
</CustomField>