force-app/main/default/objects/Negative_Information_DE_Insolvency_Event__c/fields/Reference_Number_Court__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Court__c</fullName>
    <description>File number of the insolvency at the court.</description>
    <label>Reference Number Court</label>
    <length>255</length>
    <type>Text</type>
</CustomField>